[gd_scene load_steps=4 format=2]

[ext_resource path="res://turret/Turret.gd" type="Script" id=1]
[ext_resource path="res://turret/images/Tower.png" type="Texture" id=2]
[ext_resource path="res://turret/images/Cannon2.png" type="Texture" id=3]

[node name="Turret" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 1 )

[node name="Base" type="Node2D" parent="."]
scale = Vector2( 0.2, 0.2 )

[node name="Sprite" type="Sprite" parent="Base"]
texture = ExtResource( 2 )

[node name="Cannon" type="Node2D" parent="."]
scale = Vector2( 0.2, 0.2 )

[node name="Sprite" type="Sprite" parent="Cannon"]
position = Vector2( 40, 0 )
rotation = 1.5708
texture = ExtResource( 3 )

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="LeftBarrel" type="Node2D" parent="."]
position = Vector2( 41, -8 )

[node name="RightBarrel" type="Node2D" parent="."]
position = Vector2( 41, 8 )

[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
